# arch-id-web

./: .env  .gitignore  LICENSE.md  README.md  docker-compose.dev.yml  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml
backend/: .devcontainer.json  .gitignore  Dockerfile  pyproject.toml
backend/app/: dependencies.py  main.py  models.py  routes.py  settings.py  utils.py
backend/tests/: conftest.py  test_dependencies.py  test_models_server.py  test_predict.py  test_routes.py  test_tf_serving.py
config/: models.dev.config  models.prod.config
frontend/: .devcontainer.json  .gitignore  Dockerfile  package.json
frontend/public/: index.html
frontend/src/: App.tsx  ChartComponents.tsx  Copyright.tsx  Predictor.tsx  classes.ts  env.ts  environment.ts  image-conversion.ts  imageConversion.ts  index.css  index.tsx  settings.ts  types.ts  utils.ts
scripts/: deploy.sh
