[tool.poetry]
name = "arch-id-backend"
version = "0.1.0"
description = ""
authors = ["Gary Tyler <mail@garytyler.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.70.0"
tensorflow = "^2.6.0"
Pillow = "^8.4.0"
httpx = "^0.20.0"
uvicorn = { extras = ["standard"], version = "^0.15.0" }
python-multipart = "^0.0.5"

[tool.poetry.dev-dependencies]
black = "21.7b0"
isort = "^5.9.3"
flake8 = "^4.0.1"
mypy = "^0.910"
pytest = "^6.2.5"
pytest-asyncio = "^0.16.0"
pytest-trio = "^0.7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
